<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_map"
      android:icon="@drawable/ic_map_black_24dp"
      android:title="@string/nv_map"/>
    <item
      android:id="@+id/nav_favourites"
      android:icon="@drawable/ic_favorite_border_black_24dp"
      android:title="@string/nv_favourites"/>
    <item
      android:id="@+id/nav_sights"
      android:icon="@drawable/ic_location_city_black_24dp"
      android:title="@string/nv_sights"/>
    <item
      android:id="@+id/nav_food"
      android:icon="@drawable/ic_restaurant_black_24dp"
      android:title="@string/nv_food"/>
    <item
      android:id="@+id/nav_bars"
      android:icon="@drawable/ic_local_bar_black_24dp"
      android:title="@string/nv_bars"/>
    <item
      android:id="@+id/nav_clubs"
      android:icon="@drawable/ic_music_note_black_24dp"
      android:title="@string/nv_clubs"/>
  </group>

  <item android:title="Communicate">
    <menu>
      <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="Share"/>
      <item
        android:id="@+id/nav_send"
        android:icon="@drawable/ic_menu_send"
        android:title="Send"/>
    </menu>
  </item>

</menu>
