<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="@dimen/nav_header_height"
  android:id="@+id/nav"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingStart="@dimen/activity_horizontal_margin"
  android:paddingEnd="@dimen/activity_horizontal_margin"
  android:background="@drawable/side_nav_bar"
  android:gravity="bottom"
  android:orientation="vertical"
  android:theme="@style/ThemeOverlay.AppCompat.Dark">

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    android:contentDescription="@string/nav_header_desc"
    app:srcCompat="@mipmap/ic_launcher_round"/>

  <TextView
    android:id="@+id/user_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    tools:text="@string/user_name"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

  <TextView
    android:id="@+id/user_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:text="@string/nav_header_subtitle"/>

</LinearLayout>
