<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment">

    <ScrollView
        android:id="@+id/favourite_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_6x">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/favourite_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/location_photo"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/main_header_selector"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/favourite_place_mame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_half"
                        android:fontFamily="@font/yeseva_one"
                        android:gravity="start"
                        android:padding="@dimen/margin_1x"
                        android:paddingStart="@dimen/margin_1x"
                        android:textColor="@color/white"
                        android:textSize="36sp"
                        tools:text="@string/marker_title" />

                    <TextView
                        android:id="@+id/favourite_place_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:gravity="start"
                        android:paddingStart="@dimen/margin_1x"
                        android:paddingBottom="@dimen/margin_1x"
                        android:textColor="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="18sp"
                        tools:text="@string/address" />
                </LinearLayout>


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/colourlovers_strip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/favourite_telephone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="bottom|center"
                    android:padding="@dimen/margin_half"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/telephone_number" />

                <TextView
                    android:id="@+id/favourite_place_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="bottom|center"
                    android:padding="@dimen/margin_half"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:textSize="18sp"
                    tools:text="@string/web_url" />


            </LinearLayout>


            <TextView
                android:id="@+id/favourite_open_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="bottom|center"
                android:paddingTop="@dimen/margin_2x"
                android:text="@string/open_now"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/favourite_weekday_opening_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="bottom|center"
                android:paddingTop="@dimen/margin_2x"
                android:text="@string/opening_hours"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_favourite_detail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/white"
                android:contentDescription="@string/map_view"
                android:padding="@dimen/margin_half" />

            <TextView
                android:id="@+id/tv_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_2x"
                android:text="@string/photos"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/favourite_photo_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>


            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_1x"
                android:text="@string/reviews"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/favourite_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/remove_from_favourites_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_2x"
        android:layout_marginBottom="@dimen/margin_2x"
        android:contentDescription="@string/delete_from_favourites_button"
        android:src="@drawable/ic_delete_white_24dp" />

</android.support.design.widget.CoordinatorLayout>

