<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".DetailFragment">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:contentDescription="@string/location_photo"
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

      <TextView
        android:paddingTop="@dimen/margin_2x"
        android:id="@+id/place_mame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/marker_title"/>

      <TextView
        android:paddingTop="@dimen/margin_2x"
        android:id="@+id/place_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/marker_id"/>

      <TextView
        android:paddingTop="@dimen/margin_2x"
        android:id="@+id/place_url"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:text="@string/web_url"/>

    </LinearLayout>


  </ScrollView>

</android.support.design.widget.CoordinatorLayout>

